fix word wrap around existing tweets

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -106,6 +106,7 @@ form {
 #tweets-container .main-tweet {
   padding: 2.4em 0.4em;
   background-color: #fff;
+  word-break: break-all;
 }
 
 #tweets-container .tweet {
